# Brain

./: .gitignore  LICENSE  README.md  __init__.py  activation.py  basal_ganglia.py  brain_audit.py  broca.py  ca1.py  ca3.py  config.py  connection.py  cortex.py  curriculum.py  development.py  episode.py  experience.py  gpt_evaluator.py  graph_storage.py  hippocampus.py  lexicon.py  llm_postprocess.py  mechanism_registry.yml  motor_output.py  network.py  neuromodulation.py  neuron.py  papa_cli.py  pattern.py  pfc.py  pyproject.toml  sdr.py  semantic_roles.py  spiking.py  test_babi.py  test_babi_diagnostic.py  test_brain.py  test_fineweb.py  test_ior.py  test_logic.py  (+3 more)
baselines/: memnet_baseline.py  ntm_baseline.py  tfidf_baseline.py
data/: childes_loader.py  grade1_world.py  preschool_world.py  procedural_knowledge.py  theory_of_mind.py
docs/: ARCHITECTURE.md  RESULTS.md  ROADMAP.md  arxiv.tex  check_citations.py  plan.md  references.bib
logs/: test_results_04.02.2026_23-05-13.txt  test_results_05.02.2026_22-39-49.txt  test_results_06.02.2026_13-42-11.txt  test_results_06.02.2026_13-55-04.txt  test_results_07.02.2026_12-45-49.txt  test_results_07.02.2026_13-22-51.txt  test_results_07.02.2026_21-47-01.txt  test_results_16.04.2026_21-12-42.txt  test_results_21.02.2026_17-01-55.txt  test_results_21.02.2026_17-23-01.txt  test_results_21.02.2026_18-52-02.txt  test_results_23.01.2026_22-53-19.txt  test_results_28.01.2026_00-40-56.txt
tests/: debug_attention.py  test_child_knowledge.py  test_episodic_memory_biological.py  test_memory_model.py  test_sdr_learned.py
