[project]
name = "brain"
version = "0.1.0"
description = "Биологически правдоподобная модель памяти на правиле Хебба"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name"}
]
keywords = ["memory", "hebbian", "neuroscience", "ai"]

dependencies = [
    "numpy>=1.24.0",
    "datasets>=2.14.0",
    "pylangacq>=0.19.1",
    "nltk>=3.9.2",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
    "networkx>=3.0",
]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
